TWINS-118: refactoring code